previous code updated with cleaner/leaner version